# sound-processor

./: CMakeLists.txt  README.md
app/: application.cpp  application.h  main.cpp
command_line/: CLIParser.cpp  CLIParser.h
filters/: AmGeneratorFilter.cpp  AmGeneratorFilter.h  AmplFilter.cpp  AmplFilter.h  FmGeneratorFilter.cpp  FmGeneratorFilter.h  LowpassFilter.cpp  LowpassFilter.h  NormalizeFilter.cpp  NormalizeFilter.h  SilenceFilter.cpp  SilenceFilter.h  SinGeneratorFilter.cpp  SinGeneratorFilter.h  TimestretchFilter.cpp  TimestretchFilter.h  filter.h  filters.h
pipeline/: FilterProducer.cpp  FilterProducer.h  PipelineConverter.cpp  PipelineConverter.h  pipeline.cpp  pipeline.h
sound_processor_tests/: TestFilters.cpp  TestParser.cpp  TestWaveform.cpp
wav/: WavHeader.h  WavRead.cpp  WavRead.h  WavWrite.cpp  WavWrite.h  waveform.cpp  waveform.h
